<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ScrollView
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <LinearLayout
                android:id="@+id/linearLayout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/text_bg_color"
                android:orientation="vertical"
                android:visibility="visible"
                android:paddingStart="8dp"
                android:paddingEnd="8dp"
                android:paddingBottom="16dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent">
                <ImageView
                    android:id="@+id/iv_back"
                    android:layout_width="30dp"
                    android:layout_height="30dp"
                    android:layout_marginTop="8dp"
                    android:layout_marginBottom="8dp"
                    android:src="@drawable/ic_baseline_keyboard_arrow_left_24"/>

                <com.google.android.material.textview.MaterialTextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:paddingLeft="16dp"
                    android:paddingRight="16dp"
                    android:paddingTop="8dp"
                    android:paddingBottom="8dp"
                    android:text="@string/acc_creation_header"
                    android:fontFamily="@font/chivo_bold"
                    android:textSize="16sp"
                    android:textStyle="bold" />

                <com.google.android.material.textview.MaterialTextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:paddingLeft="16dp"
                    android:paddingRight="16dp"
                    android:paddingTop="8dp"
                    android:paddingBottom="8dp"
                    android:fontFamily="@font/chivo_regular"
                    android:text="@string/acc_creation_subtitle"
                    android:textSize="13sp"
                    android:textStyle="bold" />

                <com.google.android.material.textview.MaterialTextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/chivo_bold"
                    android:padding="5dp"
                    android:textColor="@color/text_hint_color"
                    android:text="@string/mandatory" />

            </LinearLayout>

            <ImageView
                android:id="@+id/imageView"
                android:layout_width="100dp"
                android:layout_height="100dp"
                app:layout_constraintBottom_toBottomOf="@+id/linearLayout"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/linearLayout"
                app:layout_constraintVertical_bias="0.0"
                app:srcCompat="@drawable/img_guitar" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_marginEnd="8dp"
                android:layout_marginBottom="20dp"
                android:orientation="vertical"
                app:layout_constraintTop_toBottomOf="@id/linearLayout">

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/first_name_layout"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="16dp">

                    <EditText
                        android:id="@+id/edt_first_name"
                        style="@style/EditText.SignUp"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:drawablePadding="32dp"
                        android:fontFamily="@font/chivo_bold"
                        android:hint="@string/first_name"
                        android:maxLength="50"
                        android:imeOptions="actionNext"
                        android:inputType="textPersonName|textCapWords"
                        android:text="Regina"/>
                </com.google.android.material.textfield.TextInputLayout>

                <View
                    android:id="@+id/first_name_separator"
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:layout_marginStart="16dp"
                    android:layout_marginEnd="16dp"
                    android:layout_marginBottom="16dp"
                    android:background="@color/separator" />

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/last_name_layout"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <EditText
                        android:id="@+id/edt_last_name"
                        style="@style/EditText.SignUp"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/last_name"
                        android:maxLength="50"
                        android:fontFamily="@font/chivo_bold"
                        android:text="Chan"
                        android:imeOptions="actionNext"
                        android:inputType="textPersonName|textCapWords" />
                </com.google.android.material.textfield.TextInputLayout>

                <View
                    android:id="@+id/last_name_separator"
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:layout_marginStart="16dp"
                    android:layout_marginEnd="16dp"
                    android:layout_marginBottom="16dp"
                    android:background="@color/separator" />

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/email_address_layout"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <EditText
                        android:id="@+id/edt_email_address"
                        style="@style/EditText.SignUp"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:maxLength="50"
                        android:fontFamily="@font/chivo_bold"
                        android:hint="@string/email_address"
                        android:text="regina@codigo.co"
                        android:imeOptions="actionNext"
                        android:inputType="textEmailAddress" />
                </com.google.android.material.textfield.TextInputLayout>

                <View
                    android:id="@+id/email_address_separator"
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:layout_marginStart="16dp"
                    android:layout_marginEnd="16dp"
                    android:layout_marginBottom="16dp"
                    android:background="@color/text_bg_color" />

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <ImageView
                        android:id="@+id/imageView2"
                        android:layout_width="30dp"
                        android:layout_height="30dp"
                        android:layout_centerInParent="true"
                        app:srcCompat="@drawable/img_dob" />

                    <com.github.angads25.toggle.widget.LabeledSwitch
                        android:id="@+id/sw_gender"
                        android:layout_width="100dp"
                        android:layout_height="40dp"
                        android:layout_alignParentEnd="true"
                        android:layout_centerInParent="true"
                        android:layout_gravity="center"
                        android:textSize="14sp"
                        app:colorBorder="@color/button_color"
                        app:colorOn="@color/button_color"
                        app:on="false"
                        app:textOff="Female"
                        app:textOn="Male" />

                    <com.google.android.material.textfield.TextInputLayout
                        android:id="@+id/dob_layout"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content">

                        <EditText
                            android:id="@+id/edt_dob"
                            style="@style/EditText.SignUp"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:focusable="false"
                            android:fontFamily="@font/chivo_bold"
                            android:hint="@string/date_of_birth"
                            android:imeOptions="actionNext"
                            android:inputType="date"
                            android:maxLength="10"
                            android:text="@string/dob_sample" />
                    </com.google.android.material.textfield.TextInputLayout>

                    <View
                        android:id="@+id/dob_separator"
                        android:layout_width="match_parent"
                        android:layout_height="1dp"
                        android:layout_below="@id/dob_layout"
                        android:layout_marginStart="16dp"
                        android:layout_marginEnd="16dp"
                        android:layout_marginBottom="16dp"
                        android:background="@color/text_bg_color" />
                </RelativeLayout>

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/nationality_layout"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <EditText
                        android:id="@+id/edt_nationality"
                        style="@style/EditText.SignUp"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/nationality"
                        android:maxLength="50"
                        android:fontFamily="@font/chivo_bold"
                        android:imeOptions="actionNext"
                        android:text="Singaporean"
                        android:inputType="text" />
                </com.google.android.material.textfield.TextInputLayout>

                <View
                    android:id="@+id/nationality_separator"
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:layout_marginStart="16dp"
                    android:layout_marginEnd="16dp"
                    android:layout_marginBottom="16dp"
                    android:background="@color/text_bg_color" />

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/country_of_residence_layout"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <EditText
                        android:id="@+id/edt_country_of_residence"
                        style="@style/EditText.SignUp"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:fontFamily="@font/chivo_bold"
                        android:hint="@string/country_of_residence"
                        android:imeOptions="actionNext"
                        android:maxLength="50"
                        android:text="Singapore"
                        android:inputType="text" />
                </com.google.android.material.textfield.TextInputLayout>

                <View
                    android:id="@+id/country_of_residence_separator"
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:layout_marginStart="16dp"
                    android:layout_marginEnd="16dp"
                    android:layout_marginBottom="16dp"
                    android:background="@color/text_bg_color" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">
                    <TextView
                        android:paddingLeft="16dp"
                        android:paddingRight="16dp"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:textColor="@color/text_hint_color"
                        android:fontFamily="@font/chivo_bold"
                        android:text="@string/mobile_no"/>
                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="16dp"
                        android:orientation="horizontal">
                        <EditText
                            android:id="@+id/edt_country_code"
                            style="@style/EditText.SignUp"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:imeOptions="actionNext"
                            android:hint="@string/country_code_sample"
                            android:maxLength="5"
                            android:inputType="phone" />
                        <View
                            android:id="@+id/phone_no_separator"
                            android:layout_width="1dp"
                            android:layout_height="match_parent"
                            android:layout_marginStart="16dp"
                            android:layout_marginEnd="16dp"
                            android:background="@color/text_bg_color" />
                        <EditText
                            android:id="@+id/edt_mobile_no"
                            style="@style/EditText.SignUp"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:imeOptions="actionNext"
                            android:maxLength="15"
                            android:hint="@string/phone_no_sample"
                            android:inputType="number" />
                    </LinearLayout>
                </LinearLayout>
                <View
                    android:id="@+id/mobile_no_separator"
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:layout_marginStart="16dp"
                    android:layout_marginEnd="16dp"
                    android:background="@color/text_bg_color" />

                <com.google.android.material.button.MaterialButton
                    android:id="@+id/create_account_btn"
                    style="@style/ShapeAppearanceOverlay.Material3.Button"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="16dp"
                    android:backgroundTint="@color/button_color"
                    android:text="@string/create_new_account"
                    android:textAllCaps="false"
                    android:textColor="@color/white"
                    android:padding="20sp"
                    android:textStyle="bold"
                    app:cornerRadius="8dp"
                    tools:ignore="RtlSymmetry" />
            </LinearLayout>
        </androidx.constraintlayout.widget.ConstraintLayout>

    </ScrollView>


</androidx.constraintlayout.widget.ConstraintLayout>