<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ImageView
        android:id="@+id/iv_welcome"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:scaleType="centerCrop"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.496"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/img_welcome" />

    <ImageView
        android:id="@+id/iv_cloud"
        android:layout_width="0dp"
        android:layout_height="540dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:srcCompat="@drawable/img_clouds" />

    <LinearLayout
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="@+id/iv_cloud">

        <com.google.android.material.textview.MaterialTextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="25dp"
            android:layout_marginEnd="25dp"
            android:layout_marginBottom="8dp"
            android:layout_marginTop="8dp"
            android:fontFamily="@font/chivo_bold"
            android:text="@string/welcome_header"
            android:textSize="37sp"
            android:textStyle="bold" />

        <com.google.android.material.textview.MaterialTextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="25dp"
            android:layout_marginEnd="25dp"
            android:layout_marginBottom="25dp"
            android:fontFamily="@font/chivo_regular"
            android:layout_marginTop="15dp"
            android:text="@string/welcome_subtitle"
            android:textSize="15sp"
            android:textStyle="bold" />

        <com.google.android.material.card.MaterialCardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="25dp"
            android:layout_marginEnd="25dp"
            android:layout_marginBottom="8dp"
            android:layout_marginTop="8dp"
            android:backgroundTint="@color/colorPrimary"
            app:cardCornerRadius="8dp">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:padding="15dp">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerInParent="true"
                    android:text="@string/login_fb"
                    android:textColor="@color/white"
                    android:textSize="15sp"
                    android:textStyle="bold" />

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentEnd="true"
                    android:background="@drawable/bg_rounded"
                    android:src="@drawable/img_fb" />
            </RelativeLayout>
        </com.google.android.material.card.MaterialCardView>

        <com.google.android.material.button.MaterialButton
            style="@style/ShapeAppearanceOverlay.Material3.Button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="25dp"
            android:layout_marginEnd="25dp"
            android:layout_marginBottom="8dp"
            android:drawableEnd="@drawable/img_fb"
            android:padding="15sp"
            android:text="@string/login_email"
            android:textAllCaps="false"
            android:textColor="@color/white"
            android:textSize="15sp"
            android:textStyle="bold"
            app:cornerRadius="8dp"
            tools:ignore="RtlSymmetry" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/create_account_btn"
            style="@style/ShapeAppearanceOverlay.Material3.Button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="25dp"
            android:layout_marginEnd="25dp"
            android:layout_marginBottom="8dp"
            android:backgroundTint="@color/button_color"
            android:padding="20dp"
            android:text="@string/create_new_account"
            android:textAllCaps="false"
            android:textColor="@color/white"
            android:textSize="15sp"
            android:textStyle="bold"
            app:cornerRadius="8dp"
            tools:ignore="RtlSymmetry" />

    </LinearLayout>

    <ImageView
        android:id="@+id/iv_clear"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="13dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/ic_baseline_clear_24" />

</androidx.constraintlayout.widget.ConstraintLayout>